--- a/public_html/theme/css/title.css
+++ b/public_html/theme/css/title.css
@@ -1,7 +1,7 @@
 .t_site, #dm_page .t_site {
   color: #000;
   font-size: 0;
-  background: url(../images/logo200.png) top left no-repeat;
+  background: url(../images/logo200alpha.png) top left no-repeat;
   width: 200px;
   height: 57px;
   display: block;
