--- a/public_html/theme/css/rubrique.css
+++ b/public_html/theme/css/rubrique.css
@@ -1,25 +1,35 @@
 div.rubrique.list {
-	margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
-div.rubrique.list .link {
-  height: 40px;
-  line-height: 40px;
+#dm_page div.rubrique.list .link {
+  color: #aaa;
+  height: 45px;
+  line-height: 45px;
   padding-left: 10px;
   text-decoration: none;
   display: block;
+  font-size: 16px;
   font-weight: bold;
   letter-spacing: 2px;
   -moz-border-radius: 4px;
 }
 
-div.rubrique.list .link.dm_current,
-div.rubrique.list .link.dm_parent {
+
+#dm_page div.rubrique.list .link.dm_current,
+#dm_page div.rubrique.list .link.dm_parent,
+#dm_page div.rubrique.list a.link:hover {
+  background: url(../images/rubrique_over.png) top left repeat-y;
+  color: #000;
+  /*
   background: url(../images/menu_left_item_bg.png) top left no-repeat;
   background-position: 0 -40px;
+  */
 }
 
 #dm_page div.rubrique.list a.link:hover {
+  /*
   background: url(../images/menu_left_item_bg.png) top left no-repeat;
   color: #000;
+  */
 }
