--- a/public_html/theme/css/main.css
+++ b/public_html/theme/css/main.css
@@ -89,3 +89,11 @@ div.main_head_links .right li {
   border-bottom: 0;
   padding: 6px 10px 6px 10px;
 }
+
+.main_sitemap {
+  margin: 10px;
+}
+
+.main_sitemap ul {
+  margin-left: 1em;
+}
