fixed full screen style

--- a/public_html/theme/css/layout.css
+++ b/public_html/theme/css/layout.css
@@ -57,7 +57,7 @@ body.full_screen .dm_layout_center {
   width: 100%;
 }
 
-body.full_screen .dm_content {
+body.full_screen .dm_page_content {
   padding: 0;
   background: #000;
 }
