--- a/public_html/theme/css/rubrique.css
+++ b/public_html/theme/css/rubrique.css
@@ -15,21 +15,52 @@ div.rubrique.list {
   -moz-border-radius: 4px;
 }
 
-
 #dm_page div.rubrique.list .link.dm_current,
 #dm_page div.rubrique.list .link.dm_parent,
 #dm_page div.rubrique.list a.link:hover {
   background: url(../images/rubrique_over.png) top left repeat-y;
   color: #000;
-  /*
-  background: url(../images/menu_left_item_bg.png) top left no-repeat;
-  background-position: 0 -40px;
-  */
 }
 
-#dm_page div.rubrique.list a.link:hover {
-  /*
-  background: url(../images/menu_left_item_bg.png) top left no-repeat;
+div.preface {
+  margin-top: 3px;
+  background: #fff url(../images/dirtypaper.jpg) top left no-repeat;
   color: #000;
-  */
+  font-family: "monospace";
+}
+
+div.preface a.next_page {
+  float: right;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+  padding: 10px 5px;
+}
+
+#dm_page div.preface a.bottom_close {
+  float: right;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+  padding: 1em;
+  color: #000;
+}
+
+.preface_text {
+  padding: 1em 1em 0 1em;
+}
+
+.preface_title {
+  font-size: 1.5em;
+  padding: 1em 110px 0 1em;
+}
+
+div.preface h3 {
+  font-size: 1.3em;
+}
+
+.preface_image {
+  float: left;
+  margin: 0 1em 1em 0;
 }
