--- a/public_html/theme/css/main.css
+++ b/public_html/theme/css/main.css
@@ -22,16 +22,19 @@ strong {
 
 #dm_page a.diapo_link {
   display: block;
-  float: left;
-  background: url(../images/play24.png) top right no-repeat;
+  float: right;
+  /*background: url(../images/play24.png) top right no-repeat;*/
   height: 24px;
   line-height: 24px;
-  padding: 0 30px 0 0;
+  /*padding: 0 30px 0 0;*/
   text-decoration: none;
+  color: #000;
+  /*text-shadow:0 -1px 2px rgba(255, 255, 255, 0.35);*/
 }
 
 #dm_page a.diapo_link:hover {
   background-position: right -24px;
+  color: #BBB;
 }
 
 #full_screen_loading {
@@ -65,18 +68,29 @@ div.main_head_links .right li {
 
 #dm_page .main_head_links li .link {
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 15px;
   text-decoration: none;
   padding: 6px 10px 5px 10px;
-  letter-spacing: 1px;
+  letter-spacing: 4px;
   border: 2px solid #000;
   border-bottom: 0;
+  color: #666;
+  text-shadow:0 -1px 2px rgba(255, 255, 255, 0.65);
+}
+
+#dm_page .main_head_links li .link:hover {
+  color: #fff;
 }
 
 #dm_page .main_head_links .rss_link {
   float: right;
   margin-left: 20px;
-  margin-top: -2px;
+  margin-top: -5px;
+  opacity: 0.6;
+}
+
+#dm_page .main_head_links .rss_link:hover {
+  opacity: 1;
 }
 
 #dm_page .main_head_links .link.dm_parent,
@@ -92,6 +106,23 @@ div.main_head_links .right li {
 
 .main_sitemap {
   margin: 10px;
+  font-size: 2em;
+}
+
+.main_sitemap li {
+  padding: 0.3em 0;
+  font-size: 0.8em;
+  list-style: disc inside;
+  color: #222;
+}
+
+#dm_page .main_sitemap .link {
+  text-decoration: none;
+  color: #555;
+}
+
+#dm_page .main_sitemap .link:hover {
+  color: #AAA;
 }
 
 .main_sitemap ul {
